--- a/MFCappMVP/MFCappMVP.vcxproj.filters
+++ b/MFCappMVP/MFCappMVP.vcxproj.filters
@@ -13,6 +13,15 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Файлы заголовков\UsersManagmentDlg">
+      <UniqueIdentifier>{e92d197a-572d-46c2-8202-adca437d09d7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы заголовков\UsersManagmentDlg\Model">
+      <UniqueIdentifier>{1539e08f-d480-416a-bba1-ab544c5fa818}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\Model">
+      <UniqueIdentifier>{5b0e1b71-c06b-45e8-b24c-2c009b650c6a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MFCappMVP.h">
@@ -33,6 +42,9 @@
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CUser.h">
+      <Filter>Файлы заголовков\UsersManagmentDlg\Model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCappMVP.cpp">
@@ -43,6 +55,9 @@
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="CUser.cpp">
+      <Filter>Исходные файлы\Model</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
