--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -164,10 +164,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\MFCappMVP\PersonListPresenterImpl.h" />
+    <ClInclude Include="..\MFCappMVP\PersonListRepository.h" />
+    <ClInclude Include="..\MFCappMVP\PersonListView.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\MFCappMVP\PersonListRepositoryImpl.cpp" />
     <ClCompile Include="PersonListTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
