--- a/MFCappMVP/MFCappMVP.vcxproj.filters
+++ b/MFCappMVP/MFCappMVP.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClInclude Include="Resource.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="Person.h">
       <Filter>Файлы заголовков\PersonListDlg\model</Filter>
     </ClInclude>
@@ -75,12 +72,12 @@
     <ClInclude Include="PersonListDlg.h">
       <Filter>Файлы заголовков\PersonListDlg\view</Filter>
     </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCappMVP.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="pch.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Person.cpp">
@@ -94,6 +91,9 @@
     </ClCompile>
     <ClCompile Include="PersonListDlg.cpp">
       <Filter>Исходные файлы\PersonListDlg\view</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
