--- a/MFCappMVP/MFCappMVP.vcxproj
+++ b/MFCappMVP/MFCappMVP.vcxproj
@@ -187,11 +187,11 @@
     <ClInclude Include="PersonListDlg.h" />
     <ClInclude Include="PersonListPresenterImpl.h" />
     <ClInclude Include="PersonListRepositoryImpl.h" />
-    <ClInclude Include="PersonListRepository.h" />
-    <ClInclude Include="PersonListView.h" />
+    <ClInclude Include="IPersonListRepository.h" />
+    <ClInclude Include="IPersonListView.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MFCappMVP.h" />
-    <ClInclude Include="PersonListPresenter.h" />
+    <ClInclude Include="IPersonListPresenter.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
