--- a/MFCappMVP/MFCappMVP.vcxproj.filters
+++ b/MFCappMVP/MFCappMVP.vcxproj.filters
@@ -66,7 +66,7 @@
     <ClInclude Include="IPersonListViewModel.h">
       <Filter>Файлы заголовков\PersonListDlg\presenter</Filter>
     </ClInclude>
-    <ClInclude Include="PersonListPresenterImpl.h">
+    <ClInclude Include="PersonListViewModelImpl.h">
       <Filter>Файлы заголовков\PersonListDlg\presenter</Filter>
     </ClInclude>
     <ClInclude Include="IPersonListView.h">
@@ -95,7 +95,7 @@
     <ClCompile Include="PersonListRepositoryImpl.cpp">
       <Filter>Исходные файлы\PersonListDlg\model</Filter>
     </ClCompile>
-    <ClCompile Include="PersonListPresenterImpl.cpp">
+    <ClCompile Include="PersonListViewModelImpl.cpp">
       <Filter>Исходные файлы\PersonListDlg\presenter</Filter>
     </ClCompile>
     <ClCompile Include="PersonListDlg.cpp">
