--- a/MFCappMVP/MFCappMVP.vcxproj.filters
+++ b/MFCappMVP/MFCappMVP.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="PersonListUiState.h">
       <Filter>PersonListDlg\presentation</Filter>
     </ClInclude>
+    <ClInclude Include="DispatcherShowMessage.h">
+      <Filter>PersonListDlg\presentation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCappMVP.cpp">
